0.8.3 (December xx, 2022)
- added documentation for commands

0.8.2 (September 30, 2022)
- Adds UpdateWriter. It scans source files for metadata headers and adds to the database. Currently only looks for 'Credit:' or 'Produced by:'.
- `.xhtml` added to parseable file extensions
- stop producing kindle.noimages unless asked to
- add a "generic" file name for Writers that don't write (Twiter, Facebook, Update)

0.8.1 (September 14, 2022)
- when the html file is large (>16M), in most cases we don't really want to make an EPUB or a MOBI. Making the MOBI can take hours with our current infrastructure. Changed the source file size filters  so these formats are not made.
- when the source EPUBs are >32M, only old-format MOBIs are not made.
- add jekyll script
- stop trying to store qr codes in databaseta from backup workflow files
- add script to load metadata

0.8.0 (August 18, 2022)
- production directory moves from ~/converter to ~/ebookconverter to accomplish the python version migration.

0.8.0b2 (August 7, 2022) final candidate
- `--notify` and `--validate` are now flags that turn on validation and notification
- use simpler CLI to call Ebookmaker
- update requirements

0.8.0b1 (August 4, 2022) final candidate?
- exceptions in notifier would cause stuck pid Files

0.8.0b0 (July 26, 2022) beta
- now using ebookmaker 0.12 (beta),
- use new notifier API
- refactored/added --notify and --validate command-line options
- add epub3 and kf8 filetypes

0.7.12 (June 7, 2022)
- added a script to reload a workflow file. Usage: reload_workflow [list of ebook numbers]
- add requirement for lxml<4.7

0.7.11 (April 28, 2022)
- update facebook API version
- update dependencies for last gasp py 3.6 environments; 0.8 will be py 3.7+
- fix exception handling to be more useful when there's already a pid file
- fix a test
- updates for 2022

0.7.10 (November 11, 2021)
- change build order - epub.images can mess up the nomages and covers builds
- adjusted logging
- delint