@@ -1,5 +1,7 @@
 0.8.3 (December xx, 2022)
 - added documentation for commands
+- add checking that a source file exists
+- refactor filesize checking to remove CRITICAL messages when a build is skipped
 
 0.8.2 (September 30, 2022)
 - Adds UpdateWriter. It scans source files for metadata headers and adds to the database. Currently only looks for 'Credit:' or 'Produced by:'.
